# hmalloc

./: .gitignore  CMakeLists.txt  DESIGN.md  LICENSE  README.md
bench/: bench.cpp
include/hmalloc/: hmalloc.h
src/: central.cpp  central.h  constants.h  heap.cpp  heap.h  hmalloc.cpp  os.cpp  os.h  override.cpp  region_registry.cpp  region_registry.h  segment.h  size_class.h
tests/: test_alloc.cpp  test_basic.cpp  test_os.cpp  test_size_class.cpp  test_stats.cpp  test_threads.cpp  test_util.h
